[gd_scene load_steps=39 format=3 uid="uid://b8b4dy55f0cqy"]

[ext_resource type="Texture2D" uid="uid://cr48nhom3ef2k" path="res://sprites/Level/Background/BaseBlue640x640.png" id="1"]
[ext_resource type="Texture2D" uid="uid://clmqf1um6cqlt" path="res://sprites/Level/AsteroidsAndPlanets/Planets.png" id="2"]
[ext_resource type="Texture2D" uid="uid://yr0i80ok8x2k" path="res://sprites/Level/AsteroidsAndPlanets/Asteroids.png" id="3"]
[ext_resource type="Script" path="res://Scripts/Level.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://dqu4ut7vf7sqy" path="res://Scenes/Player.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dk8oumh7o061w" path="res://Scenes/HUD.tscn" id="6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m60m3"]
texture = ExtResource("2")
margins = Vector2i(0, 16)
texture_region_size = Vector2i(80, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hq5ht"]
texture = ExtResource("2")
margins = Vector2i(88, 8)
texture_region_size = Vector2i(64, 56)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_chk1p"]
texture = ExtResource("2")
margins = Vector2i(96, 256)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_regw8"]
texture = ExtResource("2")
margins = Vector2i(176, 256)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vwf8o"]
texture = ExtResource("2")
margins = Vector2i(16, 336)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5xrev"]
texture = ExtResource("2")
margins = Vector2i(96, 336)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mlitj"]
texture = ExtResource("2")
margins = Vector2i(176, 336)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h5pli"]
texture = ExtResource("2")
margins = Vector2i(16, 416)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_djipf"]
texture = ExtResource("2")
margins = Vector2i(96, 416)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t4fgf"]
texture = ExtResource("2")
margins = Vector2i(176, 416)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4mk3r"]
texture = ExtResource("2")
margins = Vector2i(176, 16)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_33hky"]
texture = ExtResource("2")
margins = Vector2i(0, 96)
texture_region_size = Vector2i(80, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f1ac4"]
texture = ExtResource("2")
margins = Vector2i(88, 88)
texture_region_size = Vector2i(64, 56)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kwcno"]
texture = ExtResource("2")
margins = Vector2i(176, 96)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m5me5"]
texture = ExtResource("2")
margins = Vector2i(0, 176)
texture_region_size = Vector2i(80, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7wm8q"]
texture = ExtResource("2")
margins = Vector2i(88, 168)
texture_region_size = Vector2i(64, 56)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f4gr4"]
texture = ExtResource("2")
margins = Vector2i(176, 176)
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m48jg"]
texture = ExtResource("2")
margins = Vector2i(8, 248)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSet" id="2"]
tile_size = Vector2i(48, 48)
sources/0 = SubResource("TileSetAtlasSource_m60m3")
sources/1 = SubResource("TileSetAtlasSource_hq5ht")
sources/2 = SubResource("TileSetAtlasSource_4mk3r")
sources/3 = SubResource("TileSetAtlasSource_33hky")
sources/4 = SubResource("TileSetAtlasSource_f1ac4")
sources/5 = SubResource("TileSetAtlasSource_kwcno")
sources/6 = SubResource("TileSetAtlasSource_m5me5")
sources/7 = SubResource("TileSetAtlasSource_7wm8q")
sources/8 = SubResource("TileSetAtlasSource_f4gr4")
sources/9 = SubResource("TileSetAtlasSource_m48jg")
sources/10 = SubResource("TileSetAtlasSource_chk1p")
sources/11 = SubResource("TileSetAtlasSource_regw8")
sources/12 = SubResource("TileSetAtlasSource_vwf8o")
sources/13 = SubResource("TileSetAtlasSource_5xrev")
sources/14 = SubResource("TileSetAtlasSource_mlitj")
sources/15 = SubResource("TileSetAtlasSource_h5pli")
sources/16 = SubResource("TileSetAtlasSource_djipf")
sources/17 = SubResource("TileSetAtlasSource_t4fgf")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s1pny"]
texture = ExtResource("3")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1cm0u"]
texture = ExtResource("3")
margins = Vector2i(64, 0)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gkf2a"]
texture = ExtResource("3")
margins = Vector2i(128, 0)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_htrco"]
texture = ExtResource("3")
margins = Vector2i(192, 0)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7clrn"]
texture = ExtResource("3")
margins = Vector2i(0, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dkdhe"]
texture = ExtResource("3")
margins = Vector2i(64, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k5j7d"]
texture = ExtResource("3")
margins = Vector2i(128, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8r6ui"]
texture = ExtResource("3")
margins = Vector2i(192, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSet" id="1"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_s1pny")
sources/1 = SubResource("TileSetAtlasSource_1cm0u")
sources/2 = SubResource("TileSetAtlasSource_gkf2a")
sources/3 = SubResource("TileSetAtlasSource_htrco")
sources/4 = SubResource("TileSetAtlasSource_7clrn")
sources/5 = SubResource("TileSetAtlasSource_dkdhe")
sources/6 = SubResource("TileSetAtlasSource_k5j7d")
sources/7 = SubResource("TileSetAtlasSource_8r6ui")

[sub_resource type="PhysicsMaterial" id="6"]
friction = 0.0
bounce = 2.27

[sub_resource type="WorldBoundaryShape2D" id="3"]
normal = Vector2(3, 0)

[sub_resource type="WorldBoundaryShape2D" id="4"]
normal = Vector2(-3, 0)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(10, 300)

[node name="Node2D_Level" type="Node2D"]
script = ExtResource("4")

[node name="BaseBlue640X640" type="Sprite2D" parent="."]
position = Vector2(512, 300)
texture = ExtResource("1")

[node name="TileMap_Planets" type="TileMap" parent="BaseBlue640X640"]
tile_set = SubResource("2")
format = 2

[node name="TileMap_Astereoids" type="TileMap" parent="BaseBlue640X640"]
position = Vector2(-512, -300)
tile_set = SubResource("1")
format = 2

[node name="TopLeft" type="Marker2D" parent="BaseBlue640X640"]
position = Vector2(-320, -320)

[node name="BottomRight" type="Marker2D" parent="BaseBlue640X640"]
position = Vector2(320, 320)

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AsteroidSpawnRight" type="Marker2D" parent="AsteroidTimer"]
position = Vector2(825, -100)

[node name="AsteroidSpawnLeft" type="Marker2D" parent="AsteroidTimer"]
position = Vector2(200, -100)

[node name="AsteroidTargetRight" type="Marker2D" parent="AsteroidTimer"]
position = Vector2(832, 666)

[node name="AsteroidTargetLeft" type="Marker2D" parent="AsteroidTimer"]
position = Vector2(194, 666)

[node name="Player" parent="." instance=ExtResource("5")]
unique_name_in_owner = true
position = Vector2(512, 550)

[node name="Control" parent="." instance=ExtResource("6")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(512, 300)
zoom = Vector2(2, 2)

[node name="Border" type="RigidBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource("6")

[node name="CollisionShape3D" type="CollisionShape2D" parent="Border"]
position = Vector2(862, 300)
shape = SubResource("3")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2(162, 300)
shape = SubResource("4")
disabled = true

[node name="CollisionShape2" type="CollisionShape2D" parent="Border"]
position = Vector2(862, 300)
scale = Vector2(2, 1)
shape = SubResource("5")
one_way_collision_margin = 0.0

[node name="CollisionShape3" type="CollisionShape2D" parent="Border"]
position = Vector2(160, 300)
scale = Vector2(2, 1)
shape = SubResource("5")
one_way_collision_margin = 0.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(600, 1024)

[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
